<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="debug_string">媒体编号:\t%d\n歌曲标题:\t%s\n主艺术家:\t%s\n所属专辑:\t%s\n播放进度:\t%d / %d\n歌曲路径:\t%s\n当前歌词:\t%s\n歌词路径:\t%s\n歌词字符集:\t%s\n定时关机:\t%tc</string>
<string name="app_name">toralyrics</string>
<string name="widget_name">toralyrics 桌面插件</string>
<string name="app_message">toralyrics是一个简单的歌词显示辅助软件，为Android和HTC的内置播放器提供多种形式的歌词显示，同时带有睡眠模式功能。\n\n测试版目前仅读取与歌曲文件同名的lrc文件，支持一行多个时间标签和乱序标签，以及整体偏移量。\n\n版本 0.10 alpha\n惊羽九天</string>
<string name="main_titlebar">%s   %s</string>
<string name="dialog_ok">确定</string>
<string name="dialog_cancel">取消</string>
<string name="playback_not_start">未处于播放状态</string>
<string name="lyrics_not_exist">未找到歌词</string>
<string name="sleepmode_remaining">睡眠模式剩余%d分钟</string>
<string name="menu_control">播放控制</string>
<string name="menu_preference">设置</string>
<string name="menu_sleepmode">睡眠模式</string>
<string name="menu_expansion">扩展功能</string>
<string name="menu_about">关于</string>
<string name="menu_exit">退出</string>
<string name="menu_prev">上一曲 (手势:右)</string>
<string name="menu_playpause">播放/暂停 (手势:上)</string>
<string name="menu_replay">重播此曲 (手势:下)</string>
<string name="menu_next">下一曲 (手势:左)</string>
<string name="menu_playlist">播放列表管理</string>
<string name="menu_delete">删除当前歌曲及歌词</string>
<string name="menu_deletelyrics">仅删除当前歌词</string>
<string name="menu_debuginfo">调试信息</string>
<string name="menu_test">选择播放列表</string>
<string name="delete_message">您确认要删除当前歌曲\n\n%s\n\n及其相关歌词文件吗？</string>
<string name="delete_success">歌曲删除成功</string>
<string name="delete_failure">歌曲删除失败</string>
<string name="delete_require">无法删除当前歌曲：必须处于播放状态。</string>
<string name="deletelyrics_message">您确认要删除当前歌词文件？\n\n%s</string>
<string name="deletelyrics_success">歌词删除成功</string>
<string name="deletelyrics_failure">歌词删除失败</string>
<string name="deletelyrics_notexist">无法删除当前歌词：歌词不存在。</string>
<string name="deletelyrics_require">无法删除当前歌词：必须处于播放状态。</string>
<string name="backkey_message">如果退出程序，会停止包括桌面插件在内的歌词显示功能。\n\n您可在设置界面中更改按下返回键的默认响应。</string>
<string name="backkey_hide">后台运行</string>
<string name="backkey_exit">退出</string>
<string name="sleepmode_message">在以下时间之后停止音乐播放并退出程序</string>
<string name="pref_widget_category">歌词显示</string>
<string name="pref_widget_splitlyrics">智能断句</string>
<string name="pref_widget_splitlyrics_on">遇到长句歌词在最可能的位置换行</string>
<string name="pref_widget_splitlyrics_off">超出行长度部分换行显示</string>
<string name="pref_widget_showanimation">动画效果</string>
<string name="pref_widget_showanimation_on">歌词切换使用动态效果(桌面插件无效)</string>
<string name="pref_widget_showanimation_off">禁用歌词切换时的动态效果</string>
<string name="pref_widget_enablegesture">使用手势</string>
<string name="pref_widget_enablegesture_on">在主画面使用手势进行播放控制</string>
<string name="pref_widget_enablegesture_off">禁用手势控制功能</string>
<string name="pref_widget_fullscreen">全屏显示</string>
<string name="pref_widget_fullscreen_on">全屏显示，隐藏顶部状态栏</string>
<string name="pref_widget_fullscreen_off">显示顶部状态栏</string>
<string name="pref_display_category">通知区设置</string>
<string name="pref_display_showposition">显示播放进度</string>
<string name="pref_display_showposition_on">在歌名前显示当前播放时间及总时间</string>
<string name="pref_display_showposition_off">不显示播放进度</string>
<string name="pref_display_tickertext">信息栏持续显示</string>
<string name="pref_display_tickertext_on">在屏幕顶部持续显示歌词</string>
<string name="pref_display_tickertext_off">仅下拉后可见歌词</string>
<string name="pref_lyrics_category">歌词预处理</string>
<string name="pref_lyrics_skipblank">忽略空白行</string>
<string name="pref_lyrics_skipblank_on">不显示作为分隔的空白行歌词</string>
<string name="pref_lyrics_skipblank_off">按原样显示空白行歌词</string>
<string name="pref_lyrics_offset">偏移调整</string>
<string name="pref_lyrics_offset_sum">歌词统一提前或推迟时间</string>
<string name="pref_lyrics_charset">歌词字符集</string>
<string name="pref_lyrics_charset_sum">选择歌词所用的字符集(下次载入生效)</string>
<string name="pref_global_category">系统设置</string>
<string name="pref_global_keepscreen">保持屏幕开启</string>
<string name="pref_global_keepscreen_on">程序运行时保持屏幕开启(耗电)</string>
<string name="pref_global_keepscreen_off">使用系统设置</string>
<string name="pref_global_refreshrate">刷新速率</string>
<string name="pref_global_refreshrate_sum">较快的刷新速率可能会增加系统负担</string>
<string name="pref_global_backkey">返回键响应</string>
<string name="pref_global_backkey_sum">确定当点击返回键时的响应</string>
</resources>
