<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_widget_category">
        <CheckBoxPreference
            android:key="splitlyrics"
            android:title="@string/pref_widget_splitlyrics"
            android:summaryOn="@string/pref_widget_splitlyrics_on"
            android:summaryOff="@string/pref_widget_splitlyrics_off"
            android:defaultValue="true"
        />
        <CheckBoxPreference
            android:key="showanimation"
            android:title="@string/pref_widget_showanimation"
            android:summaryOn="@string/pref_widget_showanimation_on"
            android:summaryOff="@string/pref_widget_showanimation_off"
            android:defaultValue="true"
        />
        <CheckBoxPreference
            android:key="enablegesture"
            android:title="@string/pref_widget_enablegesture"
            android:summaryOn="@string/pref_widget_enablegesture_on"
            android:summaryOff="@string/pref_widget_enablegesture_off"
            android:defaultValue="true"
        />
    </PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_display_category">
        <CheckBoxPreference
            android:key="showposition"
            android:title="@string/pref_display_showposition"
            android:summaryOn="@string/pref_display_showposition_on"
            android:summaryOff="@string/pref_display_showposition_off"
            android:defaultValue="true"
        />
        <CheckBoxPreference
            android:key="tickertext"
            android:title="@string/pref_display_tickertext"
            android:summaryOn="@string/pref_display_tickertext_on"
            android:summaryOff="@string/pref_display_tickertext_off"
            android:defaultValue="false"
        />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_lyrics_category">
        <CheckBoxPreference
            android:key="skipblank"
            android:title="@string/pref_lyrics_skipblank"
            android:summaryOn="@string/pref_lyrics_skipblank_on"
            android:summaryOff="@string/pref_lyrics_skipblank_off"
            android:defaultValue="true"
        />
	    <ListPreference
	        android:key="offset"
	        android:title="@string/pref_lyrics_offset"
	        android:summary="@string/pref_lyrics_offset_sum"
	        android:dialogTitle="@string/pref_lyrics_offset"
	        android:entries="@array/entries_lyrics_offset"
	        android:entryValues="@array/entriesvalue_lyrics_offset"
            android:defaultValue="0"
	    />
	    <ListPreference
	        android:key="charset"
	        android:title="@string/pref_lyrics_charset"
	        android:summary="@string/pref_lyrics_charset_sum"
	        android:dialogTitle="@string/pref_lyrics_charset"
	        android:entries="@array/entries_lyrics_charset"
	        android:entryValues="@array/entriesvalue_lyrics_charset"
            android:defaultValue="auto"
        />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_global_category">
        <CheckBoxPreference
            android:key="keepscreen"
            android:title="@string/pref_global_keepscreen"
            android:summaryOn="@string/pref_global_keepscreen_on"
            android:summaryOff="@string/pref_global_keepscreen_off"
            android:defaultValue="true"
        />
	    <ListPreference
	        android:key="backkey"
	        android:title="@string/pref_global_backkey"
	        android:summary="@string/pref_global_backkey_sum"
	        android:dialogTitle="@string/pref_global_backkey"
	        android:entries="@array/entries_global_backkey"
	        android:entryValues="@array/entriesvalue_global_backkey"
            android:defaultValue="alert"
	    />
	    <ListPreference
	        android:key="refreshrate"
	        android:title="@string/pref_global_refreshrate"
	        android:summary="@string/pref_global_refreshrate_sum"
	        android:dialogTitle="@string/pref_global_refreshrate"
	        android:entries="@array/entries_global_refreshrate"
	        android:entryValues="@array/entriesvalue_global_refreshrate"
            android:defaultValue="200"
	    />
	</PreferenceCategory>
</PreferenceScreen>